--- a/src/styles/LogInSignUpForm.module.css
+++ b/src/styles/LogInSignUpForm.module.css
@@ -28,6 +28,14 @@ a {
   text-align: center;
   display: block;
   margin: auto;
+  padding: 0.5rem;
+}
+.LogInSignUpButton {
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  margin: auto;
+  padding: 0.5rem;
 }
 
 .Col {
