--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -8,9 +8,23 @@
   margin-left: 2px;
   background-color: #9d4edd;
   border-color: #9247cf;
-  border-width: 2px;
+  border-width: 1px;
 }
 .Button:hover {
   background-color: #9247cf;
   border-color: #9d4edd;
+}
+.Button:active:focus {
+  border-color: #9247cf;
+  transition: color, fill ease-in-out 0.3s;
+}
+.Button:not(:disabled):not(.disabled):active {
+  background-color: #9247cf;
+  transform: translateY(1px);
+  border-color: #9247cf;
+}
+.Button:focus {
+  background-color: #9247cf;
+  border-color: #9247cf;
+  box-shadow: none Imp !important;
 }
