Add: Profile dropdown and logout handling

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -13,3 +13,9 @@
 .Active i {
   color: #7f3df6;
 }
+.DropdownMenu:active {
+  background-color: #7f3df6 !important;
+}
+a::after {
+  display: none !important;
+}
