--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -14,8 +14,11 @@
   color: #7f3df6;
 }
 .DropdownMenu:active {
-  background-color: #7f3df6 !important;
+  background-color: rgb(199, 199, 199) !important;
 }
 a::after {
   display: none !important;
+}
+a:hover {
+  color: #7f3df6;
 }
