--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -10,8 +10,32 @@
   font-size: inherit;
 }
 
+.Container {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 60px 30px;
+}
+
+.AvatarPos {
+  grid-column: 1;
+  grid-row: 2 / 3;
+  margin: 1%;
+}
+
 .UpdatedAt {
   color: #212529;
+  grid-column: 1;
+  grid-row: 2 / 3;
+  text-align: center;
+  font-size: 75%;
+}
+.UpdatedAt:hover {
+  cursor: default;
+}
+.EditBtn {
+  font-size: smaller;
+  font-style: italic;
+  color: #9d4edd;
 }
 .Icon {
   color: rgb(0, 0, 0);
