--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -49,3 +49,15 @@
   color: #9d4edd;
   font-weight: 600;
 }
+.LikedIcon {
+  color: rgb(255, 0, 0);
+  font-size: 1.6rem;
+  padding: 7px;
+  vertical-align: middle;
+}
+.LikedIcon:hover {
+  cursor: pointer;
+  transition: color ease-in-out 0.3s;
+  color: #9d4edd;
+  font-weight: 600;
+}
