--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.fade-appear-done {
+  opacity: 1;
+  transition: opacity 0.3s cubic-bezier(1, 0, 0, 1),
+    opacity 0.3s cubic-bezier(1, 0, 0, 1);
+}
+
+.fade-appear {
+  opacity: 0;
+  transition: opacity 0.3s cubic-bezier(1, 0, 0, 1),
+    opacity 0.3s cubic-bezier(1, 0, 0, 1);
+}
+
+.psychic {
+  -webkit-animation: hue-rotate 5s ease-in;
+  animation: hue-rotate 5s ease-in;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9d4edd;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+
+@keyframes hue-rotate {
+  0% {
+    background: #9d4edd;
+  }
+  25% {
+    background: #9d4edd;
+  }
+  50% {
+    background: #a63caf;
+  }
+  75% {
+    background: #9d4edd;
+  }
+  100% {
+    background: #9d4edd;
+  }
+}
