--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,13 @@ i:hover {
   perspective: 1000px;
 }
 
+svg:hover {
+  animation: gentleshake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
 @keyframes shake {
   0% { transform: translateX(0) }
   25% { transform: translateY(-9px) }
@@ -64,4 +71,15 @@ i:hover {
   65% { transform: translateY(-9px) rotate(17deg) }
   75% { transform: translateY(-9px) rotate(-17deg) }
   100% { transform: translateY(0) rotate(0) }
+
+}
+@keyframes gentleshake {
+  0% { transform: translateX(0) }
+  25% { transform: translateY(-3px) }
+  35% { transform: translateY(-3px) rotate(3deg) }
+  55% { transform: translateY(-3px) rotate(-3deg) }
+  65% { transform: translateY(-3px) rotate(3deg) }
+  75% { transform: translateY(-3px) rotate(-3deg) }
+  100% { transform: translateY(0) rotate(0) }
+
 }
