Add: Post rendering to home, liked posts and feed

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ code {
     background: #a63caf;
   }
   75% {
-    background: #9d4edd;
+    background: #4C23E8;
   }
   100% {
     background: #9d4edd;
