Add: Box shadows to components and buttons

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -10,6 +10,7 @@
   border-color: #9247cf;
   border-width: 1px;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .Button:hover {
   background-color: #9247cf;
@@ -44,6 +45,7 @@
   border-color: #6d2319;
   border-width: 1px;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .CancelButton:hover {
   background-color: #6d2319;
