Edit: Background styles and animation

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 .fade-appear-done {
@@ -21,8 +21,8 @@ code {
 }
 
 .psychic {
-  -webkit-animation: hue-rotate 5s ease-in;
-  animation: hue-rotate 5s ease-in;
+  -webkit-animation: background-animation 5s ease-in;
+  animation: background-animation 5s ease-in;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -31,55 +31,86 @@ code {
   border: 2px solid transparent;
 }
 
-@keyframes hue-rotate {
+@keyframes background-animation {
   0% {
-    background: #9d4edd;
+    background: #582b7c8a;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='2080' height='560' preserveAspectRatio='none' viewBox='0 0 2080 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1114%26quot%3b)' fill='none'%3e%3cpath d='M -390.3193722713302%2c203 C -286.32%2c244.8 -78.32%2c415.4 129.68062772866978%2c412 C 337.68%2c408.6 441.68%2c199.4 649.6806277286698%2c186 C 857.68%2c172.6 961.68%2c339.2 1169.6806277286698%2c345 C 1377.68%2c350.8 1481.68%2c201.2 1689.6806277286698%2c215 C 1897.68%2c228.8 2131.62%2c437.6 2209.6806277286696%2c414 C 2287.74%2c390.4 2105.94%2c160.4 2080%2c97' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -766.2005784294247%2c456 C -662.2%2c380.6 -454.2%2c89.6 -246.20057842942464%2c79 C -38.2%2c68.4 65.8%2c384.6 273.79942157057536%2c403 C 481.8%2c421.4 585.8%2c172.8 793.7994215705753%2c171 C 1001.8%2c169.2 1105.8%2c410.2 1313.7994215705753%2c394 C 1521.8%2c377.8 1680.56%2c109 1833.7994215705753%2c90 C 1987.04%2c71 2030.76%2c257.2 2080%2c299' stroke='rgba(166%2c 60%2c 175%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -609.320026915308%2c427 C -505.32%2c361.6 -297.32%2c105 -89.32002691530795%2c100 C 118.68%2c95 222.68%2c393.2 430.67997308469205%2c402 C 638.68%2c410.8 742.68%2c148.4 950.679973084692%2c144 C 1158.68%2c139.6 1262.68%2c354.6 1470.679973084692%2c380 C 1678.68%2c405.4 1868.82%2c261.4 1990.679973084692%2c271 C 2112.54%2c280.6 2062.14%2c396.6 2080%2c428' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1114'%3e%3crect width='2080' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   }
   25% {
-    background: #9d4edd;
+    background: #582b7c8a;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='2080' height='560' preserveAspectRatio='none' viewBox='0 0 2080 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1114%26quot%3b)' fill='none'%3e%3cpath d='M -390.3193722713302%2c203 C -286.32%2c244.8 -78.32%2c415.4 129.68062772866978%2c412 C 337.68%2c408.6 441.68%2c199.4 649.6806277286698%2c186 C 857.68%2c172.6 961.68%2c339.2 1169.6806277286698%2c345 C 1377.68%2c350.8 1481.68%2c201.2 1689.6806277286698%2c215 C 1897.68%2c228.8 2131.62%2c437.6 2209.6806277286696%2c414 C 2287.74%2c390.4 2105.94%2c160.4 2080%2c97' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -766.2005784294247%2c456 C -662.2%2c380.6 -454.2%2c89.6 -246.20057842942464%2c79 C -38.2%2c68.4 65.8%2c384.6 273.79942157057536%2c403 C 481.8%2c421.4 585.8%2c172.8 793.7994215705753%2c171 C 1001.8%2c169.2 1105.8%2c410.2 1313.7994215705753%2c394 C 1521.8%2c377.8 1680.56%2c109 1833.7994215705753%2c90 C 1987.04%2c71 2030.76%2c257.2 2080%2c299' stroke='rgba(166%2c 60%2c 175%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -609.320026915308%2c427 C -505.32%2c361.6 -297.32%2c105 -89.32002691530795%2c100 C 118.68%2c95 222.68%2c393.2 430.67997308469205%2c402 C 638.68%2c410.8 742.68%2c148.4 950.679973084692%2c144 C 1158.68%2c139.6 1262.68%2c354.6 1470.679973084692%2c380 C 1678.68%2c405.4 1868.82%2c261.4 1990.679973084692%2c271 C 2112.54%2c280.6 2062.14%2c396.6 2080%2c428' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1114'%3e%3crect width='2080' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   }
   50% {
-    background: #a63caf;
+    background: #582b7cd3;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='2080' height='560' preserveAspectRatio='none' viewBox='0 0 2080 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1114%26quot%3b)' fill='none'%3e%3cpath d='M -390.3193722713302%2c203 C -286.32%2c244.8 -78.32%2c415.4 129.68062772866978%2c412 C 337.68%2c408.6 441.68%2c199.4 649.6806277286698%2c186 C 857.68%2c172.6 961.68%2c339.2 1169.6806277286698%2c345 C 1377.68%2c350.8 1481.68%2c201.2 1689.6806277286698%2c215 C 1897.68%2c228.8 2131.62%2c437.6 2209.6806277286696%2c414 C 2287.74%2c390.4 2105.94%2c160.4 2080%2c97' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -766.2005784294247%2c456 C -662.2%2c380.6 -454.2%2c89.6 -246.20057842942464%2c79 C -38.2%2c68.4 65.8%2c384.6 273.79942157057536%2c403 C 481.8%2c421.4 585.8%2c172.8 793.7994215705753%2c171 C 1001.8%2c169.2 1105.8%2c410.2 1313.7994215705753%2c394 C 1521.8%2c377.8 1680.56%2c109 1833.7994215705753%2c90 C 1987.04%2c71 2030.76%2c257.2 2080%2c299' stroke='rgba(166%2c 60%2c 175%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -609.320026915308%2c427 C -505.32%2c361.6 -297.32%2c105 -89.32002691530795%2c100 C 118.68%2c95 222.68%2c393.2 430.67997308469205%2c402 C 638.68%2c410.8 742.68%2c148.4 950.679973084692%2c144 C 1158.68%2c139.6 1262.68%2c354.6 1470.679973084692%2c380 C 1678.68%2c405.4 1868.82%2c261.4 1990.679973084692%2c271 C 2112.54%2c280.6 2062.14%2c396.6 2080%2c428' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1114'%3e%3crect width='2080' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   }
   75% {
-    background: #4C23E8;
+    background: #582b7c8a;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='2080' height='560' preserveAspectRatio='none' viewBox='0 0 2080 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1114%26quot%3b)' fill='none'%3e%3cpath d='M -390.3193722713302%2c203 C -286.32%2c244.8 -78.32%2c415.4 129.68062772866978%2c412 C 337.68%2c408.6 441.68%2c199.4 649.6806277286698%2c186 C 857.68%2c172.6 961.68%2c339.2 1169.6806277286698%2c345 C 1377.68%2c350.8 1481.68%2c201.2 1689.6806277286698%2c215 C 1897.68%2c228.8 2131.62%2c437.6 2209.6806277286696%2c414 C 2287.74%2c390.4 2105.94%2c160.4 2080%2c97' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -766.2005784294247%2c456 C -662.2%2c380.6 -454.2%2c89.6 -246.20057842942464%2c79 C -38.2%2c68.4 65.8%2c384.6 273.79942157057536%2c403 C 481.8%2c421.4 585.8%2c172.8 793.7994215705753%2c171 C 1001.8%2c169.2 1105.8%2c410.2 1313.7994215705753%2c394 C 1521.8%2c377.8 1680.56%2c109 1833.7994215705753%2c90 C 1987.04%2c71 2030.76%2c257.2 2080%2c299' stroke='rgba(166%2c 60%2c 175%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -609.320026915308%2c427 C -505.32%2c361.6 -297.32%2c105 -89.32002691530795%2c100 C 118.68%2c95 222.68%2c393.2 430.67997308469205%2c402 C 638.68%2c410.8 742.68%2c148.4 950.679973084692%2c144 C 1158.68%2c139.6 1262.68%2c354.6 1470.679973084692%2c380 C 1678.68%2c405.4 1868.82%2c261.4 1990.679973084692%2c271 C 2112.54%2c280.6 2062.14%2c396.6 2080%2c428' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1114'%3e%3crect width='2080' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   }
   100% {
-    background: #9d4edd;
+    background: #582b7c8a;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='2080' height='560' preserveAspectRatio='none' viewBox='0 0 2080 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1114%26quot%3b)' fill='none'%3e%3cpath d='M -390.3193722713302%2c203 C -286.32%2c244.8 -78.32%2c415.4 129.68062772866978%2c412 C 337.68%2c408.6 441.68%2c199.4 649.6806277286698%2c186 C 857.68%2c172.6 961.68%2c339.2 1169.6806277286698%2c345 C 1377.68%2c350.8 1481.68%2c201.2 1689.6806277286698%2c215 C 1897.68%2c228.8 2131.62%2c437.6 2209.6806277286696%2c414 C 2287.74%2c390.4 2105.94%2c160.4 2080%2c97' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -766.2005784294247%2c456 C -662.2%2c380.6 -454.2%2c89.6 -246.20057842942464%2c79 C -38.2%2c68.4 65.8%2c384.6 273.79942157057536%2c403 C 481.8%2c421.4 585.8%2c172.8 793.7994215705753%2c171 C 1001.8%2c169.2 1105.8%2c410.2 1313.7994215705753%2c394 C 1521.8%2c377.8 1680.56%2c109 1833.7994215705753%2c90 C 1987.04%2c71 2030.76%2c257.2 2080%2c299' stroke='rgba(166%2c 60%2c 175%2c 1)' stroke-width='2'%3e%3c/path%3e%3cpath d='M -609.320026915308%2c427 C -505.32%2c361.6 -297.32%2c105 -89.32002691530795%2c100 C 118.68%2c95 222.68%2c393.2 430.67997308469205%2c402 C 638.68%2c410.8 742.68%2c148.4 950.679973084692%2c144 C 1158.68%2c139.6 1262.68%2c354.6 1470.679973084692%2c380 C 1678.68%2c405.4 1868.82%2c261.4 1990.679973084692%2c271 C 2112.54%2c280.6 2062.14%2c396.6 2080%2c428' stroke='rgba(76%2c 35%2c 232%2c 1)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1114'%3e%3crect width='2080' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
   }
 }
 
 i:hover {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
 
 svg:hover {
-  animation: gentleshake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  animation: gentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
 
 @keyframes shake {
-  0% { transform: translateX(0) }
-  25% { transform: translateY(-9px) }
-  35% { transform: translateY(-9px) rotate(17deg) }
-  55% { transform: translateY(-9px) rotate(-17deg) }
-  65% { transform: translateY(-9px) rotate(17deg) }
-  75% { transform: translateY(-9px) rotate(-17deg) }
-  100% { transform: translateY(0) rotate(0) }
-
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-9px);
+  }
+  35% {
+    transform: translateY(-9px) rotate(17deg);
+  }
+  55% {
+    transform: translateY(-9px) rotate(-17deg);
+  }
+  65% {
+    transform: translateY(-9px) rotate(17deg);
+  }
+  75% {
+    transform: translateY(-9px) rotate(-17deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
 }
 @keyframes gentleshake {
-  0% { transform: translateX(0) }
-  25% { transform: translateY(-3px) }
-  35% { transform: translateY(-3px) rotate(3deg) }
-  55% { transform: translateY(-3px) rotate(-3deg) }
-  65% { transform: translateY(-3px) rotate(3deg) }
-  75% { transform: translateY(-3px) rotate(-3deg) }
-  100% { transform: translateY(0) rotate(0) }
-
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-3px);
+  }
+  35% {
+    transform: translateY(-3px) rotate(3deg);
+  }
+  55% {
+    transform: translateY(-3px) rotate(-3deg);
+  }
+  65% {
+    transform: translateY(-3px) rotate(3deg);
+  }
+  75% {
+    transform: translateY(-3px) rotate(-3deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
 }
