Add: Commenting form layout and function to posts

--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,4 +1,35 @@
 .Avatar {
-    margin: 0px 8px;
-    object-fit: cover;
+  margin: 0px 8px;
+  object-fit: cover;
+}
+
+.Avatar:hover {
+  animation: gentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes gentleshake {
+  0% {
+    transform: translateX(0);
   }
+  25% {
+    transform: translateY(-3px);
+  }
+  35% {
+    transform: translateY(-3px) rotate(3deg);
+  }
+  55% {
+    transform: translateY(-3px) rotate(-3deg);
+  }
+  65% {
+    transform: translateY(-3px) rotate(3deg);
+  }
+  75% {
+    transform: translateY(-3px) rotate(-3deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
