--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -4,6 +4,7 @@
   margin-bottom: 16px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 25px;
 }
 .PostBadge {
   padding: 5px;
