--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -4,33 +4,31 @@
   border-radius: 50px;
   font-size: 0.9rem;
   padding: 7.5px;
-  margin-right: 2px;
-  margin-left: 2px;
+  margin: 2px;
   background-color: #9d4edd;
-  border-color: #9247cf;
-  border-width: 1px;
-  color: white;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border: 1px solid #9247cf;
+  color: #ffffff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.3s ease-in-out;
 }
+
 .Button:hover {
   background-color: #9247cf;
   border-color: #9d4edd;
   font-weight: 600;
   color: #ffffff;
 }
-.Button:active:focus {
-  border-color: #9247cf;
-  transition: color, fill ease-in-out 0.3s;
-}
-.Button:not(:disabled):not(.disabled):active {
+
+.Button:active:not(:disabled),
+.Button:focus:not(:disabled) {
   background-color: #9247cf;
+  border-color: #9247cf;
   transform: translateY(1px);
-  border-color: #9247cf;
+  outline: none;
 }
+
 .Button:focus {
-  background-color: #9247cf;
-  border-color: #9247cf;
-  box-shadow: none Imp !important;
+  box-shadow: none !important;
 }
 
 .CancelButton {
