--- a/src/styles/ScrollToTopButton.module.css
+++ b/src/styles/ScrollToTopButton.module.css
@@ -1,4 +1,4 @@
-.button {
+.Button {
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -14,13 +14,13 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   }
   
-  .button:hover {
+  .Button:hover {
     background-color: #7847a8;
     transform: scale(1.1);
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
   }
   
-  .button.show {
+  .Button.show {
     opacity: 1;
     animation: fadeIn 0.5s ease-in-out;
   }
