--- a/src/styles/ScrollToTopButton.module.css
+++ b/src/styles/ScrollToTopButton.module.css
@@ -1,38 +1,58 @@
 .Button {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    background-color: #9247cf;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 18px;
-    cursor: pointer;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  background-color: #9247cf;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 18px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+span i{
+  animation: bounce 2s infinite;
+  color: white;
+}
+
+span i:hover {
+  color: #add8e6;
+}
+
+.Button:hover {
+  background-color: #7847a8;
+  transform: scale(1.1);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
+}
+
+.Button.show {
+  opacity: 1;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
     opacity: 0;
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    transform: scale(0.8);
   }
-  
-  .Button:hover {
-    background-color: #7847a8;
-    transform: scale(1.1);
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
-  }
-  
-  .Button.show {
+  to {
     opacity: 1;
-    animation: fadeIn 0.5s ease-in-out;
+    transform: scale(1);
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: scale(0.8);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
   }
-  
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
