Fix: Conflicting span child icon styles

--- a/src/styles/ScrollToTopButton.module.css
+++ b/src/styles/ScrollToTopButton.module.css
@@ -14,12 +14,12 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-span i{
+button span i{
   animation: bounce 2s infinite;
   color: white;
 }
 
-span i:hover {
+button span i:hover {
   color: #add8e6;
 }
 
