Create: Comment edit functionality and style form

--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -53,6 +53,46 @@
   box-shadow: none Imp !important;
 }
 
+.CancelCommentEditButton {
+  align-self: center;
+  min-width: 100px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #b62c1a;
+  border-color: #b62c1a;
+  border-width: 1px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.CancelCommentEditButton:hover {
+  background-color: #882012;
+  border-color: #882012;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.CancelCommentEditButton:active:focus {
+  border-color: #882012;
+  transition: color, fill ease-in-out 0.3s;
+}
+.CancelCommentEditButton:not(:disabled):not(.disabled):active {
+  background-color: #882012;
+  transform: translateY(1px);
+  border-color: #882012;
+}
+.CancelCommentEditButton:focus {
+  background-color: #882012;
+  border-color: #882012;
+  box-shadow: none Imp !important;
+}
+
 @keyframes btngentleshake {
   0% {
     transform: translateX(0);
