--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -23,6 +23,14 @@
   grid-row: 2 / 3;
   margin: 1%;
 }
+.NoCommentsMsg{
+  font-size: 16px;
+  color: #333;
+  font-weight: 400;
+  margin-left: 20px;
+  text-align: center !important;
+  font-weight: 700;
+}
 
 .UpdatedAt {
   color: #212529;
