--- a/src/styles/ScrollToTopButton.module.css
+++ b/src/styles/ScrollToTopButton.module.css
@@ -15,7 +15,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-button span i{
+button span i {
   animation: bounce 2s infinite;
   color: white;
 }
@@ -55,5 +55,14 @@ button span i:hover {
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 576px) {
+  .Button {
+    padding: 8px;
+    border-radius: 50%;
+    bottom: 10px;
+    right: 10px;
   }
 }
