Add: PopularProfiles component to post detail page

--- a/src/styles/PopularProfiles.module.css
+++ b/src/styles/PopularProfiles.module.css
@@ -19,3 +19,7 @@
     animation-duration: 1.5s;
     animation-iteration-count: infinite;
   }
+  .CrownIcon {
+    fill: rgb(236, 201, 1);
+    box-shadow: 10px black;
+  }
