--- a/src/styles/Asset.module.css
+++ b/src/styles/Asset.module.css
@@ -1,8 +1,23 @@
 .Asset {
-    justify-content: center;
-    align-items: center;
-    min-height: 120px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: center;
+  align-items: center;
+  min-height: 120px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 20px;
+}
+
+@media only screen and (max-width: 767px) {
+  .Asset img {
+   height: 300px;
+   width: 400px;
   }
+}
+
+@media only screen and (max-width: 667px) {
+  .Asset img {
+   height: 225px;
+   width: 300px;
+  }
+}
