Add: Scrollbar for popular profiles on mobile

--- a/src/styles/PopularProfiles.module.css
+++ b/src/styles/PopularProfiles.module.css
@@ -23,3 +23,10 @@
     fill: rgb(236, 201, 1);
     box-shadow: 10px black;
   }
+
+  @media (max-width: 767px) {
+    .Content {
+      max-height: 200px; 
+      overflow-y: scroll;
+    }
+  }
