--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -5,9 +5,138 @@
   object-fit: cover;
 }
 
+.UserSocialNumbers {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.UserSocialNumbers span {
+  font-size: 1.2rem;
+  font-weight: normal;
+  color: #666;
+  margin-left: 0.5rem;
+}
+
+.FollowButton {
+  align-self: center;
+  min-width: 100px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #4c23e8;
+  border-color: #9247cf;
+  border-width: 1px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  animation: bounce 0.3s infinite alternate;
+}
+.FollowButton:hover {
+  background-color: #9247cf;
+  border-color: #9d4edd;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.FollowButton:active:focus {
+  border-color: #9247cf;
+  transition: color, fill ease-in-out 0.3s;
+}
+.FollowButton:not(:disabled):not(.disabled):active {
+  background-color: #9247cf;
+  transform: translateY(1px);
+  border-color: #9247cf;
+}
+.FollowButton:focus {
+  background-color: #9247cf;
+  border-color: #9247cf;
+  box-shadow: none Imp !important;
+}
+
+.UnfollowButton {
+  align-self: center;
+  min-width: 100px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #4c23e8;
+  border-color: #9247cf;
+  border-width: 1px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  animation: bounce 0.3s infinite alternate;
+}
+
+.UnfollowButton:hover {
+  background-color: #9247cf;
+  border-color: #9d4edd;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.UnfollowButton:active:focus {
+  border-color: #9247cf;
+  transition: color, fill ease-in-out 0.3s;
+}
+.UnfollowButton:not(:disabled):not(.disabled):active {
+  background-color: #9247cf;
+  transform: translateY(1px);
+  border-color: #9247cf;
+}
+.UnfollowButton:focus {
+  background-color: #9247cf;
+  border-color: #9247cf;
+  box-shadow: none Imp !important;
+}
+
+/* Avatar media query to change image size for smaller screens */
+
 @media screen and (max-width: 850px) {
   .UserAvatar {
     width: 160px;
     height: 160px;
+  }
+}
+
+/* Button animations */
+
+@keyframes bounce {
+  to {
+    transform: scale(1.03);
+  }
+}
+@keyframes btngentleshake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-9px);
+  }
+  35% {
+    transform: translateY(-9px) rotate(2deg);
+  }
+  55% {
+    transform: translateY(-9px) rotate(-2deg);
+  }
+  65% {
+    transform: translateY(-9px) rotate(2deg);
+  }
+  75% {
+    transform: translateY(-9px) rotate(-2deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
   }
 }
