--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -1,33 +1,45 @@
 .CommentSection {
-    color: #9d4edd;
-    padding-top: 10px;
-    margin-bottom: 5px;
-    border-radius: 20px;
+  color: #9d4edd;
+  padding-top: 10px;
+  margin-bottom: 5px;
+  border-radius: 20px;
 }
 
 .CommentUsername {
-    text-underline-position: below;
-    color: #4c23e8;
-    font-weight: bold;
-    margin-right: 3px;
+  text-underline-position: below;
+  color: #4c23e8;
+  font-weight: bold;
+  margin-right: 3px;
 }
 .Date {
-    font-weight: lighter;
-    color: #66348fc7;
+  font-weight: lighter;
+  color: #66348fc7;
 }
 .DropdownMenu {
-    width: 20%;
+  width: 20%;
+  padding: 0px;
+  color: gray;
+  position: absolute;
+  right: 0;
+  z-index: 99;
+}
+
+.DropdownMenu:hover {
+  color: #9d4edd;
+}
+
+.DropdownMenu i {
+  color: #4c23e8;
+}
+
+@media (max-width: 576px) {
+  .DropdownMenu {
+    width: 15%;
     padding: 0px;
     color: gray;
     position: absolute;
+    margin-right: 0;
     right: 0;
     z-index: 99;
   }
-  
-  .DropdownMenu:hover {
-    color: #9d4edd;
-  }
-  
-  .DropdownMenu i {
-    color: #4C23E8;
-  }
+}
