--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -1,45 +1,109 @@
 .ContentSplit {
-    word-break: break-all;
+  word-break: break-all;
+}
+
+.FollowButton {
+  align-self: center;
+  min-width: 100px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #4c23e8;
+  border-color: #9247cf;
+  border-width: 1px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  animation: bounce 0.3s infinite alternate;
+}
+.FollowButton:hover {
+  background-color: #9247cf;
+  border-color: #9d4edd;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.FollowButton:active:focus {
+  border-color: #6c3499;
+  transition: color, fill ease-in-out 0.3s;
+}
+.FollowButton:not(:disabled):not(.disabled):active {
+  background-color: #6c3499;
+  transform: translateY(1px);
+  border-color: #9247cf;
+}
+.FollowButton:focus {
+  background-color: #542877;
+  border-color: #9247cf;
+  box-shadow: none Imp !important;
+}
+.UnfollowButton {
+  align-self: center;
+  min-width: 100px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #ff5c5c;
+  border-color: #9247cf;
+  border-width: 1px;
+  color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transition: background-color 0.2s ease;
+}
+
+.UnfollowButton:hover {
+  background-color: #e53d3d;
+  border-color: #9d4edd;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.UnfollowButton:active:focus {
+  border-color: #bb3030;
+  transition: color, fill ease-in-out 0.3s;
+}
+.UnfollowButton:not(:disabled):not(.disabled):active {
+  background-color: #bb3030;
+  transform: translateY(1px);
+  border-color: #bb3030;
+}
+.UnfollowButton:focus {
+  background-color: #942525;
+  border-color: #bb3030;
+  box-shadow: none Imp !important;
+}
+
+@keyframes btngentleshake {
+  0% {
+    transform: translateX(0);
   }
-  .UnfollowButton {
-    align-self: center;
-    min-width: 100px;
-    border-radius: 50px;
-    font-size: 0.9rem;
-    padding: 7.5px;
-    margin-bottom: 15px;
-    margin-right: 2px;
-    margin-left: 2px;
-    background-color: #FF5C5C;
-    border-color: #9247cf;
-    border-width: 1px;
-    color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    animation: bounce 0.3s infinite alternate;
-    transition: background-color 0.2s ease;
+  25% {
+    transform: translateY(-9px);
   }
-  
-  .UnfollowButton:hover {
-    background-color: #E53D3D;
-    border-color: #9d4edd;
-    font-weight: 600;
-    color: #ffffff;
-    animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
+  35% {
+    transform: translateY(-9px) rotate(2deg);
   }
-  .UnfollowButton:active:focus {
-    border-color: #9247cf;
-    transition: color, fill ease-in-out 0.3s;
+  55% {
+    transform: translateY(-9px) rotate(-2deg);
   }
-  .UnfollowButton:not(:disabled):not(.disabled):active {
-    background-color: #9247cf;
-    transform: translateY(1px);
-    border-color: #9247cf;
+  65% {
+    transform: translateY(-9px) rotate(2deg);
   }
-  .UnfollowButton:focus {
-    background-color: #9247cf;
-    border-color: #9247cf;
-    box-shadow: none Imp !important;
+  75% {
+    transform: translateY(-9px) rotate(-2deg);
   }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
