--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,6 +1,8 @@
 .Avatar {
   margin: 0px 8px;
   object-fit: cover;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .Avatar:hover {
