--- a/src/styles/PostCreateEditForm.module.css
+++ b/src/styles/PostCreateEditForm.module.css
@@ -1,11 +1,43 @@
 .Container {
-    min-height: 320px;
-  }
+  min-height: 320px;
+}
 
 .Form {
-    text-align: center;
+  text-align: center;
+  border: 1.5px solid blueviolet;
+  border-radius: 20px;
+}
+.Form option {
+  border-radius: 20px;
 }
 .Form:focus {
-    border-color: blueviolet;
-    box-shadow: 0 0 0 0.2rem rgba(185, 63, 255, 0.25);
+  border-color: blueviolet;
+  box-shadow: 0 0 0 0.2rem rgba(185, 63, 255, 0.25);
+}
+
+.ImageInput {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.AlertStyles {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 20px;
+  color: #8b0000;
+  background-color: #ffc6c6;
+  border-color: #ffa5a5;
+  animation: alert-animation 0.5s ease-in-out forwards;
+}
+
+@keyframes alert-animation {
+  0% {
+    transform: translateX(-200%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
