--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,3 +1,110 @@
+.HomePromptOne {
+  transform: rotate(-2deg);
+}
+.HomePromptThree {
+  transform: rotate(2deg);
+}
+
 .HomeButton {
-    margin-right: 10px;
+  align-self: center;
+  min-width: 50px;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  padding: 7.5px;
+  margin-bottom: 15px;
+  margin-right: 2px;
+  margin-left: 2px;
+  background-color: #4c23e8;
+  border-color: #9247cf;
+  border-width: 1px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.HomeButton:hover {
+  background-color: #9247cf;
+  border-color: #9d4edd;
+  font-weight: 600;
+  color: #ffffff;
+  animation: btngentleshake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+.HomeButton:active:focus {
+  border-color: #9247cf;
+  transition: color, fill ease-in-out 0.3s;
+}
+.HomeButton:not(:disabled):not(.disabled):active {
+  background-color: #9247cf;
+  transform: translateY(1px);
+  border-color: #9247cf;
+}
+.HomeButton:focus {
+  background-color: #9247cf;
+  border-color: #9247cf;
+  box-shadow: none Imp !important;
+}
+.ContactIcons {
+  animation: bounce 2s ease-in-out infinite;
+}
+.ContactIcons:hover {
+  color: #ffffff;
+}
+
+.LinkedinIcon {
+  color: #0958a7;
+}
+
+.GithubIcon {
+  color: #24292e;
+}
+
+@keyframes btngentleshake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-9px);
+  }
+  35% {
+    transform: translateY(-9px) rotate(2deg);
+  }
+  55% {
+    transform: translateY(-9px) rotate(-2deg);
+  }
+  65% {
+    transform: translateY(-9px) rotate(2deg);
+  }
+  75% {
+    transform: translateY(-9px) rotate(-2deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
+
+@media (max-width: 576px) {
+  .HomePrompt {
+    display: none;
+  }
+  .HomeTitle {
+    font-size: 25px;
+  }
+  .HomeDescription {
+    font-size: 17px;
+  }
+  .HomeButton {
+    min-width: 25px;
+    font-size: 0.8rem;
+  }
 }
