Refactor: Styles and JS for accessibility

--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -51,7 +51,7 @@
   margin-bottom: 15px;
   margin-right: 2px;
   margin-left: 2px;
-  background-color: #ff5c5c;
+  background-color: #800000;
   border-color: #9247cf;
   border-width: 1px;
   color: #fff;
