--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -1,6 +1,6 @@
 .CommentEntryForm {
   color: #9d4edd;
-  border-color: 0.5px #9d4edd;
+  border-color: #9d4edd;
   padding-left: 15px;
   border-radius: 20px !important;
 }
@@ -9,7 +9,7 @@
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   border: 1px #9d4edd;
   color: #9d4edd;
-  border-color: 0.5px #9d4edd;
+  border-color: #9d4edd;
   border-radius: 20px;
 }
 
@@ -50,7 +50,6 @@
 .CommentButton:focus {
   background-color: #9247cf;
   border-color: #9247cf;
-  box-shadow: none Imp !important;
 }
 
 .CancelCommentEditButton {
@@ -90,7 +89,6 @@
 .CancelCommentEditButton:focus {
   background-color: #882012;
   border-color: #882012;
-  box-shadow: none Imp !important;
 }
 
 @keyframes btngentleshake {
