--- a/src/styles/GeneralPostsPage.module.css
+++ b/src/styles/GeneralPostsPage.module.css
@@ -38,6 +38,35 @@
   cursor: pointer;
   animation: ease-in-out 0.5s;
 }
+.PostTags {
+  animation: shake 7s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
+}
+.TagIcon {
+  color: #9d4edd;
+}
+.TagIcon:hover {
+  cursor: default;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translateX(-1px);
+  }
+  20%,
+  80% {
+    transform: translateX(1px);
+  }
+  30%,
+  50%,
+  70% {
+    transform: translateX(-1px);
+  }
+  40%,
+  60% {
+    transform: translateX(1px);
+  }
+}
 
 @media only screen and (max-width: 767px) {
   div span img {
