--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -23,7 +23,7 @@
   grid-row: 2 / 3;
   margin: 1%;
 }
-.NoCommentsMsg{
+.NoCommentsMsg {
   font-size: 16px;
   color: #333;
   font-weight: 400;
@@ -45,7 +45,7 @@
   font-size: smaller;
   font-style: italic;
   color: #9d4edd;
-  margin-top: -12px
+  margin-top: -12px;
 }
 .Icon {
   color: rgb(0, 0, 0);
